<resources>
    <string name="app_name">Ratiba</string>
    <string name="zero">0</string>
    <string name="unavailable_time_slots">Scheduled Classes</string>
    <string name="available_time_slots">Available Time Slots</string>
    <string name="_8_00_am_10_00_am">8:00 am - 10:00 am</string>
    <string name="mr_teacher_subject">Mr Teacher(Subject)</string>
    <string name="_10_05_am_11_05_am">10:05 am - 11:05 am</string>
    <string name="_11_10_am_12_10_pm">11:10 am - 12:10 pm</string>
    <string name="_12_15_pm_1_00_pm">12:15 pm - 1:00 pm</string>
    <string name="_2_00_pm_3_00_pm">2:00 pm - 3:00 pm</string>
    <string name="_3_05_pm_4_05_pm">3:05 pm - 4:05 pm</string>
    <string name="alt_mr_teacher_subject">- Mr Teacher(Subject)</string>
    <string name="teacher">Teacher</string>
    <string name="darasa">Select Class</string>
    <string name="day">Select Day</string>
    <string name="create_other_accounts">Create Admin Account</string>
    <string name="success_account_created">Success!! Account Created</string>
    <string name="ratiba">Ratiba</string>
    <string name="email">Email</string>
    <string name="create_teacher_accounts">Create Teacher Accounts</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="please_verify_email">Please Verify your Email to Proceed</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="log_out">Log Out</string>
    <string name="my">Class</string>
    <string name="select_subject">Select Subject</string>
    <string name="schedule_type">Schedule Type</string>
    <string name="schedule_your_classes">Schedule Classes</string>
    <string name="schedule_class">Schedule Class</string>
    <string name="select_teacher">Select Teacher</string>
    <string name="select_time">Select Time</string>
    <string name="finish_scheduling">Finish Scheduling</string>
    <string name="change_timetable">Change Timetable</string>
    <string name="new_login"><u>Login</u></string>
    <string name="timetable">School Timetable</string>
    <string name="get_email">Verify your Email</string>
    <string name="only_admin_allowed">Error! Only Admin allowed to alter the timetable. Retry if admin</string>
    <string name="start_date_format_yr_mth_day">Start Date</string>
    <string name="end_time_format_hr_min">End Time</string>
    <string name="start_time_format_hr_min">Start Time</string>

</resources>
